Bug #5832 SELECT doesn't return records in some cases